--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,7 +23,7 @@
 <body id="home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark  bg-primary shadow-sm fixed-top">
-        <div class="container">
+        <div class="container ">
             <a class="navbar-brand" href="#">Saipul Anwar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +52,7 @@
     <section class="jumbotron text-center">
         <img src="img/Profile.jpg" alt="" width="200px" class="rounded-circle img-thumbnail">
         <h1 class="display-4"> Saipul Anwar </h1>
-        <p class="lead"> Mahasiswa</p>
+        <p class="lead"></p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#fff" fill-opacity="1"
                 d="M0,128L40,117.3C80,107,160,85,240,80C320,75,400,85,480,117.3C560,149,640,203,720,208C800,213,880,171,960,144C1040,117,1120,107,1200,90.7C1280,75,1360,53,1400,42.7L1440,32L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
@@ -66,11 +69,11 @@
                 </div>
             </div>
             <div class="row justify-content-center fs-5 text-center">
-                <div class="col-md-4">
+                <div class="col-md-4" data-aos="fade-right ">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt provident dolor sint, nesciunt
                         quod quidem unde ipsam incidunt repellat debitis.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4" data-aos="fade-left" data-aos-delay="200">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, ipsa ad nesciunt labore rerum
                         dicta, at minus quibusdam mollitia fugiat eum esse aliquid aspernatur voluptas.</p>
                 </div>
@@ -94,7 +97,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-4 mb-3">
-                    <div class="card">
+                    <div class="card" data-aos="flip-left" data-aos-duration="500">
                         <img src="img/projects/1.jpg" class="card-img-top" alt="project1">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -103,7 +106,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
+                    <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
                         <img src="img/projects/2.jpg" class="card-img-top" alt="project2">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -112,7 +115,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
+                    <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
                         <img src="img/projects/3.jpg" class="card-img-top" alt="project3">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -121,7 +124,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
+                    <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="300">
                         <img src="img/projects/4.jpg" class="card-img-top" alt="project4">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -130,7 +133,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
+                    <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
                         <img src="img/projects/5.jpg" class="card-img-top" alt="project5">
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -145,6 +148,68 @@
                 d="M0,128L80,154.7C160,181,320,235,480,245.3C640,256,800,224,960,202.7C1120,181,1280,171,1360,165.3L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
             </path>
         </svg>
+    </section>
+    <!-- Gallery -->
+    <section id="gallery">
+        <div class="container">
+            <div class="row text-center mb-3">
+                <div class=" col">
+                    <h2>Gallery</h2>
+                </div>
+            </div>
+            <div class="row  justify-content-center">
+                <div class="col-md-3">
+                    <a href="#">
+                        <img src="img/gallery/thumbnail/1.jpg" alt="gambar 1" class="img-fluid gallery-img">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#">
+                        <img src="img/gallery/thumbnail/2.jpg" alt="gambar 2" class="img-fluid gallery-img">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#">
+                        <img src="img/gallery/thumbnail/3.jpg" alt="gambar 3" class="img-fluid gallery-img">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#">
+                        <img src="img/gallery/thumbnail/4.jpg" alt="gambar 4" class="img-fluid gallery-img">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#">
+                        <img src="img/gallery/thumbnail/5.jpg" alt="gambar 5" class="img-fluid gallery-img">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#">
+                        <img src="img/gallery/thumbnail/6.jpg" alt="gambar 6" class="img-fluid gallery-img">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#">
+                        <img src="img/gallery/thumbnail/7.jpg" alt="gambar 7" class="img-fluid gallery-img">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#">
+                        <img src="img/gallery/thumbnail/8.jpg" alt="gambar 8" class="img-fluid gallery-img">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#">
+                        <img src="img/gallery/thumbnail/9.jpg" alt="gambar 9" class="img-fluid gallery-img">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="#">
+                        <img src="img/gallery/thumbnail/10.jpg" alt="gambar 10" class="img-fluid gallery-img">
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- contact -->
@@ -207,11 +272,42 @@
 
 
 
-
+    <!-- Javascript bootsrtap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
 
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        const galleryImage = document.querySelectorAll('.gallery-img');
+
+        galleryImage.forEach((img, i) => {
+            img.dataset.aos = 'fade-down';
+            img.dataset.aosDelay = i * 100;
+            img.dataset.aosDuration = 1000;
+        });
+
+        AOS.init({
+            // settingan default dari animasi AOS
+            once: true,
+            duration: 2000,
+        });
+    </script>
+
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/TextPlugin.min.js"></script>
+    <script>
+        gsap.registerPlugin(TextPlugin);
+        gsap.to('.lead', { duration: 2, delay: 1.5, text: 'Mahasiswa Teknik Informatika' });
+        gsap.from('.jumbotron img', { duration: 1, rotateY: 360, opacity: 0 });
+        gsap.from('.navbar', { duration: 1.5, y: '-100%', opacity: 0, ease: 'bounce' });
+        gsap.from('.display-4', { duration: 1, x: -50, opacity: 0, delay: 0.5, ease: 'back' });
+    </script>
+
+
+    <!-- contact form -->
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbxrX2PKgeebjPHjI2nvF3d4ll-mSCse5dq4DGeLAupaaOOmWJ0SE_68qEI__yhZG3zLAg/exec';
         const form = document.forms['submit-to-google-sheet'];
