--- a/index.html
+++ b/index.html
@@ -249,6 +249,40 @@
                 </div>
             </div>
         </div>
+
+        <section id="my-keyboards">
+            <div class="container">
+                <div class="row text-center mb-3">
+                    <div class="col">
+                        <h2>My Keyboards</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="keyboard-box">
+                            <h4 class="keyboard-name">keycron k2</h4>
+                            <img src="img/keyboard/1.png" alt="keycron K3" class="keyboard-img">
+                            <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="keyboard-box">
+                            <h4 class="keyboard-name">red dragon</h4>
+                            <img src="img/keyboard/2.png" alt="red dragon" class="keyboard-img">
+                            <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="keyboard-box">
+                            <h4 class="keyboard-name">Womier RGB</h4>
+                            <img src="img/keyboard/3.png" alt="Womier RGB" class="keyboard-img">
+                            <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#0d6efd" fill-opacity="1"
                 d="M0,192L80,160C160,128,320,64,480,80C640,96,800,192,960,202.7C1120,213,1280,139,1360,101.3L1440,64L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
@@ -334,6 +368,15 @@
                 })
                 .catch(error => console.error('Error!', error.message))
         })
+    </script>
+
+    <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
+    <script type="text/javascript">
+        VanillaTilt.init(document.querySelectorAll('.keyboard-box'), {
+            max: 35,
+            speed: 400,
+            glare: true
+        });
     </script>
 </body>
 
